# LLMBot-Discord

./: .gitignore  pyproject.toml
bot/: __init__.py  __main__.py  bot.py  config.py  log_utils.py
bot/apis/: searching.py
bot/ext/: functionality.py  meta.py
bot/util/: formatting.py
functionality/: ext.py
functionality/apis/: __init__.py  caption.py  image_gen.py  llm.py  searching.py
functionality/ext/: __init__.py  defs.py  inbound.py  outbound.py
functionality/util/: formatting.py
