[project]
name = "llmbotrewrite"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "discord.py",
    "aiohttp",
    "yarl",
    "pillow",
    "pydantic",
    "ollama",
    "transformers",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.3.5,<9",
]

[tool.ruff]
target-version = "py313"

line-length = 120
indent-width = 4

